src/objects/Risk_Controls_Association__c.object
<CustomObject>
    <fields>
        <fullName>Controls__c</fullName>
        <label>Controls</label>
        <referenceTo>Controls__c</referenceTo>
        <relationshipLabel>Associated Risks</relationshipLabel>
        <relationshipName>Risk_Controls_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk_Owner__c</fullName>
        <formula>Risk__r.Risk_Owner__r.FirstName  &amp;  &quot; &quot;  &amp;  Risk__r.Risk_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Associated Controls</relationshipLabel>
        <relationshipName>Risk_Controls_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Risk/Controls Association</label>
    <nameField>
        <displayFormat>RCA{00000}</displayFormat>
        <label>Risk/Controls Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk/Controls Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>